--- a/desafios/d010/android.html
+++ b/desafios/d010/android.html
@@ -37,8 +37,8 @@
             </p>
 
             <picture>
-                <source media="(max-width:600px)" srcset="/imagens/dan-droids-pq.png">
-                <img src="/imagens/dan-droids.png" alt="Primeiro mascote do android">
+                <source media="(max-width:600px)" srcset="imagens/dan-droids-pq.png">
+                <img src="imagens/dan-droids.png" alt="Primeiro mascote do android">
             </picture>
 
             <p>
