--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -10,7 +10,7 @@
             background-color: black;
             background-image: url(imagens-cap19/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
         main {
@@ -28,6 +28,7 @@
         <h1>Teste Imagem de fundo</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quas, repudiandae deleniti excepturi cum explicabo nostrum animi odio ducimus facilis error sapiente mollitia voluptatem exercitationem pariatur cupiditate at quo aliquam?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi odit in, veritatis atque saepe provident animi debitis numquam dolore corrupti nobis cumque laudantium nam cupiditate dicta vero iure totam corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad blanditiis dolores quisquam error. Unde, quia odit dignissimos assumenda ducimus voluptate minus eligendi, velit deleniti alliquid eos tempora laboriosam laborum ullam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem explicabo fugiat beatae necessitatibus ratione provident! Obcaecati debitis architecto porro, reprehenderit ipsum, minus at ex quis provident laborum veniam impedit omnis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem labore accusantium blanditiis sapiente quod alias excepturi assumenda sequi, impedit aspernatur! Error alias in illum et libero dolores nobis exercitationem eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam facilis fugit ad ex, totam eos atque, expedita aspernatur accusantium iusto vel mollitia amet tempore. At illum numquam esse corporis sapiente! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit, sapiente ullam omnis illum porro aliquam velit est quas, distinctio odio eos error impedit reprehenderit ea iste harum quod. Necessitatibus, adipisci. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit mollitia quaerat, quasi ex, iure quia dolores modi a consectetur unde cumque, aperiam quisquam dolore. Animi totam blanditiis similique enim praesentium. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis sit corporis numquam ea cupiditate, eum libero sapiente quas! Nulla ut voluptatem dignissimos similique enim molestias nostrum debitis quidem distinctio in! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur vitae, id ut numquam sequi nobis ea commodi enim minima quo voluptatum rem suscipit natus mollitia, doloribus qui! Tempore, corporis obcaecati. 
         </p>
     </main>
 </body>
