--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,19 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>IMAGEM-FUNDO</title>
     <style>
         body {
+             
             height: 100vh;
+            /*
             background-color: black;
             background-image: url(imagens-cap19/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+
+            shorthand-background
+                color > image > position > repeat > [size](Ñ FUNCIONA] > attachment
+
+            */
+
+            background: black url(imagens-cap19/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
