--- a/exercicios/ex022/fundo007.html
+++ b/exercicios/ex022/fundo007.html
@@ -6,15 +6,20 @@
     <title>Alinhamento vertical</title>
     <style>
         #container {
+            position: relative;
             height: 500px;
             background-color: purple;
             padding: 10px;
         }
 
         #conteudo {
+            position: absolute;
             height: 200px;
             width: 400px;
             background-color: yellow;
+
+            left: 50%;
+            top: 50%;
         }
     </style>
 
