--- a/exercicios/ex022/fundo007.html
+++ b/exercicios/ex022/fundo007.html
@@ -6,6 +6,8 @@
     <title>Alinhamento vertical</title>
     <style>
         #container {
+            background-image: url(imagens-cap19/target001.png);
+            background-size: 100% 100%;
             position: relative;
             height: 500px;
             background-color: purple;
@@ -13,6 +15,8 @@
         }
 
         #conteudo {
+            background-image: url(imagens-cap19/target001.png);
+            background-size: 100% 100%;
             position: absolute;
             height: 200px;
             width: 400px;
@@ -20,6 +24,8 @@
 
             left: 50%;
             top: 50%;
+
+            transform: translate(-50%, -50%);
         }
     </style>
 
