--- a/exercicios/ex023/tabela006.html
+++ b/exercicios/ex023/tabela006.html
@@ -21,7 +21,7 @@
             padding: 10px;
         }
         tr:nth-child(even) {
-            background-color: rgb(228, 228, 228);
+            background-color: rgba(77, 75, 75, 0.384);
         }
         div#container {
             overflow-x: auto;
