--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -4,17 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        iframe {
+            width: 400px;
+            height: 400px;
+            border: 1px dashed black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de iframes</h1>
     <p>
         Acessando o site do 
+
+        <!--Tamanho padrão 300x150
+        CSS É SOBERANO as estilizações inline
+        frameborder aceita apenas 0 e 1
+        é possível adicionar uma borda no css-->
         
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500px" scolling="no">
+            <a href="https://www.cursoemvideo.com" target="_blank">Curso em vídeo</a>
+        </iframe>
         
 
         para aprender a programar
     </p>
-    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe> é muito legal, que bacana ele einnn</p>
+    <p>
+        O repositório do Guanabara
+
+
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0" width="500px" height="500px">
+            <a href="https://gustavoguanabara.github.io" target="_blank">no Github</a>
+        </iframe>
+
+        também é legal
+    </p>
+
+    <h1>ADICIONANDO UM TERCEIRO IFRAME</h1>
+    <p>
+        Música: HAT-TRICK
+        <iframe src="https://genius.com/Djonga-hat-trick-lyrics" frameborder="0"></iframe>
+    </p>
 </body>
 </html>
