atualizei exercício iframe

--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -20,7 +20,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ab itaque quisquam beatae accusantium veniam error a, accusamus recusandae aliquam fuga optio dolor perspiciatis impedit excepturi, pariatur eos voluptatem quos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, reprehenderit alias molestias pariatur magnam suscipit esse neque amet laboriosam ullam minima ipsum eveniet cum quasi, eos, voluptatibus unde adipisci ut.</p>
 
-    <iframe src="/exercicios/ex023/tabela006.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="/exercicios/ex023/tabela006.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu computador não é compátivel com iframe</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ab itaque quisquam beatae accusantium veniam error a, accusamus recusandae aliquam fuga optio dolor perspiciatis impedit excepturi, pariatur eos voluptatem quos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, reprehenderit alias molestias pariatur magnam suscipit esse neque amet laboriosam ullam minima ipsum eveniet cum quasi, eos, voluptatibus unde adipisci ut.</p>
 </body>
