--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -27,7 +27,7 @@
         </ul>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In quia facilis quod ullam, expedita, incidunt earum quae dignissimos consectetur eaque praesentium tempora! Nesciunt sed ullam eius nobis delectus aperiam aliquam? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem voluptate deserunt officia, asperiores odio eum quam, nam natus quia fugiat at, autem eos modi! Suscipit eligendi corporis atque molestiae blanditiis.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>ESCOLHA UMA DAS OPÇÕES ACIMA</h1> <p> Lorem as dsa dsaad d aa d a </p>">
         <p>Infelizmente seu navegador não é compatível com isso</p>
     </iframe>
 
