--- a/exercicios/ex025/form002.html
+++ b/exercicios/ex025/form002.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <h1>Teste de Formulário</h1>
-    <form action="cadastro.php" method="post">
+    <form action="cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="iusu">Usuário: </label>
-            <input type="text" name="usu" id="iusu" required minlength="4" maxlength="15" size="15" placeholder="nome do usuário">
+            <input type="text" name="usu" id="iusu" required minlength="4" maxlength="15" size="15" placeholder="nome do usuário" autocomplete="username">
         </p>
         <p>
             <label for="">Senha: </label>
-            <input type="password" name="sen" id="isen" required minlength="6" size="15" placeholder="digite sua senha">
+            <input type="password" name="sen" id="isen" required minlength="6" size="15" placeholder="digite sua senha" autocomplete="current-password">
         </p>
         <p>
             <input type="submit" value="Enviar">
