--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MEDIA QUERY</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <menu>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+            </span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 01</a></li>
                 <li><a href="#">Opção 02</a></li>
@@ -27,5 +31,14 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, exercitationem aliquid eveniet excepturi recusandae voluptas, animi vel incidunt autem, corrupti ipsum sequi. Officiis dolorem similique eius quae soluta illum assumenda. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, ipsam tempora repudiandae cumque molestias consectetur non quos officiis voluptatem perspiciatis modi excepturi voluptatibus, optio minima itaque reprehenderit, consequuntur rem iusto.</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+           if (itens.style.display == 'block') {
+               itens.style.display = 'none'
+           } else {
+            itens.style.display = 'block'
+           }
+        }
+    </script>
 </body>
 </html>
